# cppProjekt2025

./: .gitignore  CMakeLists.txt  Main.qml  MapModel.h  gamecontroller.cpp  gamecontroller.h  main.cpp  mapmodel.cpp  mapmodel.h  resources.qrc  unitmodel.cpp  unitmodel.h
.qtcreator/: CMakeLists.txt.user.167a2f7  CMakeLists.txt.user.5a0e2db  project.json.user.167a2f7
